[tool.poetry]
name = "siahe-khan"
version = "0.1.0"
description = ""
authors = ["Mitra Zakeri <mitrazkri79@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.0.0"
matplotlib = "^3.9.0"
plotly = "^5.22.0"
pillow = "^10.3.0"
jdatetime = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
